<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/SCREEN"
    tools:context=".Fragments.HomeFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/avatar"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="6dp"
                    android:layout_marginStart="6dp"
                    android:background="@drawable/icon_background"
                    android:backgroundTint="@color/grey"
                    android:padding="12dp"
                    app:srcCompat="@drawable/ic_home_penguin" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/icon_background"
                    android:orientation="horizontal">

                    <SearchView
                        android:id="@+id/search_dictionary"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_margin="4dp"
                        android:background="@color/grey"
                        android:queryHint="@string/search"
                        android:inputType="text"
                        android:padding="8dp"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textColorHint="@color/blue_grey" />
                    <ProgressBar
                        android:id="@+id/progressBar_search"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_margin="4dp"
                        android:visibility="gone"
                        />

                    <!--                    <ImageView-->
                    <!--                        android:id="@+id/searchBtn"-->
                    <!--                        android:layout_width="50dp"-->
                    <!--                        android:layout_height="match_parent"-->
                    <!--                        android:layout_gravity="center"-->
                    <!--                        android:layout_weight="1"-->
                    <!--                        android:padding="4dp"-->
                    <!--                        app:srcCompat="@drawable/ic_home_search" />-->
                </LinearLayout>

                <ImageView
                    android:id="@+id/scanBtn"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_margin="6dp"
                    android:layout_marginStart="6dp"
                    android:background="@drawable/icon_background"
                    android:backgroundTint="@color/grey"
                    android:padding="12dp"
                    android:src="@drawable/ic_home_scanner"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                style="@style/Home_Blue_Default"
                android:padding="10dp">


                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="10dp"
                    style="@style/Home_LightBlue"
                    app:cardElevation="5dp" >

                    <LinearLayout
                        android:layout_width="201dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/ic_home_folder" />

                        <TextView
                            android:id="@+id/textView"
                            style="@style/TEXT"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/my_word_lists"
                            android:textAlignment="center"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="10dp"
                    style="@style/Home_LightBlue"
                    app:cardElevation="5dp"  >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/ic_home_note" />

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:textStyle="bold"
                            android:textSize="18sp"
                            style="@style/TEXT"
                            android:text="@string/daily_words" />
                    </LinearLayout>


                </androidx.cardview.widget.CardView>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/SCREEN"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <!-- card View Vocab -->
                            <androidx.cardview.widget.CardView
                                android:id="@+id/cardViewVocab"
                                android:layout_width="0dp"
                                android:layout_height="180dp"
                                android:layout_margin="5dp"
                                android:layout_weight="1"
                                app:cardCornerRadius="10dp"
                                style="@style/cardViewVocab"
                                app:cardElevation="5dp">
                                <!-- ImageView, TextView of card view Vocab -->


                                <TextView
                                    android:id="@+id/textViewVocab"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/vocabulary"
                                    android:textSize="18sp"
                                    android:textStyle="bold"
                                    style="@style/TEXT"
                                    android:layout_margin="10dp"/>


                                <ImageView
                                    android:layout_width="50dp"
                                    android:layout_height="50dp"
                                    app:srcCompat="@drawable/ic_home_cv_vocab"
                                    android:layout_marginStart="120dp"
                                    android:layout_marginTop="100dp"/>
                            </androidx.cardview.widget.CardView>

                            <!-- card View Grammar -->
                            <androidx.cardview.widget.CardView
                                android:id="@+id/cardViewGrammar"
                                android:layout_width="0dp"
                                android:layout_height="180dp"
                                android:layout_margin="5dp"
                                android:layout_weight="1"
                                style="@style/cardViewGrammar"
                                app:cardCornerRadius="10dp"
                                app:cardElevation="5dp">

                                <TextView
                                    style="@style/TEXT"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="10dp"
                                    android:text="@string/grammar"
                                    android:textSize="18sp"
                                    android:textStyle="bold" />

                                <ImageView
                                    android:layout_width="50dp"
                                    android:layout_height="50dp"
                                    android:layout_marginStart="120dp"
                                    android:layout_marginTop="100dp"
                                    app:srcCompat="@drawable/ic_home_cv_grammar" />


                                <!-- Add your content here, e.g., ImageView, TextView, etc. -->

                            </androidx.cardview.widget.CardView>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <androidx.cardview.widget.CardView
                                android:id="@+id/cardViewExpressions"
                                android:layout_width="0dp"
                                android:layout_height="180dp"
                                android:layout_margin="5dp"
                                android:layout_weight="1"
                                app:cardCornerRadius="10dp"
                                style="@style/cardViewExpressions"
                                app:cardElevation="5dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/expressions"
                                    android:textSize="18sp"
                                    android:textStyle="bold"
                                    style="@style/TEXT"
                                    android:layout_margin="10dp"/>

                                <ImageView
                                    android:layout_width="50dp"
                                    android:layout_height="50dp"
                                    app:srcCompat="@drawable/ic_home_cv_expression"
                                    android:layout_marginStart="120dp"
                                    android:layout_marginTop="100dp"/>

                                <!-- Add your content here, e.g., ImageView, TextView, etc. -->

                            </androidx.cardview.widget.CardView>

                            <androidx.cardview.widget.CardView
                                android:id="@+id/cardViewReading"
                                android:layout_width="0dp"
                                android:layout_height="180dp"
                                android:layout_margin="5dp"
                                android:layout_weight="1"
                                app:cardCornerRadius="10dp"
                                style="@style/cardViewReading"
                                app:cardElevation="5dp">
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/reading"
                                    android:textSize="18sp"
                                    style="@style/TEXT"
                                    android:textStyle="bold"
                                    android:layout_margin="10dp"/>

                                <ImageView
                                    android:layout_width="50dp"
                                    android:layout_height="50dp"
                                    app:srcCompat="@drawable/ic_home_cv_reading"
                                    android:layout_marginStart="120dp"
                                    android:layout_marginTop="100dp"/>

                                <!-- Add your content here, e.g., ImageView, TextView, etc. -->

                            </androidx.cardview.widget.CardView>

                        </LinearLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>
            </LinearLayout>

        </LinearLayout>



    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>